--- a/_posts/Spring2/Error/2023-09-30-static.md
+++ b/_posts/Spring2/Error/2023-09-30-static.md
@@ -2,7 +2,7 @@
 title: 비 static 메서드 '메서드 네임(클래스 네임)'은(는) static 컨텍스트에서 참조할 수 없습니다.
 author: maruduke
 date: 2023-09-30 14:10:00 +0800
-categories: [Spring, Error]
+categories: [Spring, E]
 tags: [Spring, Error]
 ---
 
@@ -14,7 +14,7 @@ Java로 개발 도중에 발생하는 버그
 
 ## 해결법
 
-문제 원인은 간단한 오타로 **생성한 변수가 아닌 클래스 이름을 그대로 사용함으로서 발생하는 버그**이다. 해당 클래스 명을 정상적인 변수 명으로 변경하여 해결하면 된다.
+문제 원인은 간단한 오타로 **생성한 변수가 아닌 클래스 이름을 그대로 사용함으로서 발생하는 버그**이다. 해당 클래스 명을 생성한 인스턴스의 변수 명으로 변경하여 해결하면 된다.
 
 해결 전  
 ![Desktop View](/assets/img/spring/error/2023-09-30-static/error2.png)
