--- a/_posts/Spring2/DB/MongoDB/2023-09-29-MongoDB.md
+++ b/_posts/Spring2/DB/MongoDB/2023-09-29-MongoDB.md
@@ -1,5 +1,5 @@
 ---
-title: Spring, MongoDB 연결하기
+title: '\[MongoDB\] MongoDB 도커 설치 및 연결'
 author: maruduke
 date: 2023-09-29 14:10:00 +0800
 categories: [Spring, MongoDB]
@@ -30,38 +30,17 @@ implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 ```yml
 spring:
-  data:
-    mongodb:
-      host: 127.0.0.1
-      port: 27017
-      database: lolgg
-      username: user
-      password: 1234
-      authentication-database: admin
-      uri: mongodb://localhost:27017/DBname?authSource=admin
+    data:
+        mongodb:
+            host: 127.0.0.1
+            port: 27017
+            database: lolgg
+            username: user
+            password: 1234
+            authentication-database: admin
+            uri: mongodb://localhost:27017/DBname?authSource=admin
 ```
 
 ## MongoDB Document 생성
 
 JPA를 이용하려면 DB스키마가 필요하다. 그러나 MongoDB의 경우 스키마가 존재하지 않으므로 비슷한 역할을 하는 Document를 활용할 수 있다.
-
-```java
-
-@Document(collection = "User")
-@Data
-public class User {
-
-    @Id
-    private SummonerId summonerId;
-
-    private League league;
-    private List<MatchData> matchDataList;
-
-    public User(SummonerId summonerId, League league, List<MatchData> matchDataList) {
-        this.summonerId = summonerId;
-        this.league = league;
-        this.matchDataList = matchDataList;
-    }
-}
-
-```
