--- a/_posts/TroubleShooting/2023-09-30-static.md
+++ b/_posts/TroubleShooting/2023-09-30-static.md
@@ -1,5 +1,5 @@
 ---
-title: '비 static 메서드 '메서드 네임(클래스 네임)'은(는) static 컨텍스트에서 참조할 수 없습니다.'
+title: '비 static 메서드 \'메서드 네임(클래스 네임)\'은(는) static 컨텍스트에서 참조할 수 없습니다.'
 excerpt: 'Static 참조 오류'
 
 categories:
