--- a/_posts/TroubleShooting/2023-10-01-mongo.md
+++ b/_posts/TroubleShooting/2023-10-01-mongo.md
@@ -1,5 +1,5 @@
 ---
-title: 'org.springframework.data.mapping.MappingException: No property 변수명 found on entity class 클래스 명 to bind constructor parameter'
+title: 'org.springframework.data.mapping.MappingException: No property 변수 found on entity class 클래스 to bind constructor parameter'
 excerpt: '설정자 미생성 오류'
 
 categories: - troubleShoot
