update title name

--- a/_posts/TroubleShooting/2023-09-30-static.md
+++ b/_posts/TroubleShooting/2023-09-30-static.md
@@ -1,5 +1,5 @@
 ---
-title: '비static 메서드 name은(는) static 컨텍스트에서 참조할 수 없습니다.'
+title: '비static 메서드 메서드 네임(클래스 네임)은(는) static 컨텍스트에서 참조할 수 없습니다.'
 excerpt: 'Static 참조 오류'
 
 categories:
@@ -19,8 +19,6 @@ last_modified_at: 2023-09-30
 ## 에러 내용
 
 Java로 개발 도중에 발생하는 버그
-
-> 비static 메서드 메서드 네임(클래스 네임)은(는) static 컨텍스트에서 참조할 수 없습니다.
 
 ![Desktop View](/assets/img/spring/error/2023-09-30-static/error1.png)
 
