--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -3,7 +3,7 @@ title: '\[NCP\] 1. OverView'
 excerpt: ''
 
 categories:
-    - 'Naver Cloud'
+    - 'Naver Cloud Platform'
 tags:
     - [NCP, Cloud]
 
