--- a/_posts/TroubleShooting/2023-10-01-mongo.md
+++ b/_posts/TroubleShooting/2023-10-01-mongo.md
@@ -1,5 +1,5 @@
 ---
-title: 'org.springframework.data.mapping.MappingException: No property 변수 found on entity class 클래스'
+title: 'org.springframework.data.mapping.MappingException'
 excerpt: '설정자 미생성 오류'
 
 categories: - troubleShoot
@@ -15,6 +15,8 @@ last_modified_at: 2023-10-01
 ---
 
 ## 에러 내용
+
+> org.springframework.data.mapping.MappingException: No property 변수 found on entity class 클래스
 
 MongoDB로 개발하는 도중 발생한 오류
 JPA의 Repository를 사용하면서 조회 코드를 작성하면서 발생하는 버그였다.
