--- a/_posts/TroubleShooting/2023-10-01-mongo.md
+++ b/_posts/TroubleShooting/2023-10-01-mongo.md
@@ -2,8 +2,10 @@
 title: 'org.springframework.data.mapping.MappingException'
 excerpt: '설정자 미생성 오류'
 
-categories: - troubleShoot
-tags: - [Java, TroubleShoot]
+categories:
+    - troubleShoot
+tags:
+    - [Java, TroubleShoot]
 
 permalink: /Java/troubleShoot/2
 
