--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -16,4 +16,49 @@ date: 2024-04-05
 last_modified_at: 2024-04-05
 ---
 
-## 네이버 클라우드 플랫폼
+## 클라우드 역사
+
+-   1960년대 가상화라는 용어 사용
+    -   당시에는 전 가상화 기법을 사용하여 구현
+    -   에뮬레이터도 존재
+-   다양한 하이퍼바이저의 출현
+    -   IBM의 Logical Partition
+    -   VMWare
+    -   Xen
+    -   KVM
+    -   Hyper-V
+
+## 클라우드 컴퓨팅 장점
+
+-   CAPEX를 OPEX로 대체
+
+    -   클라우드를 사용하면 유동적인 IT 자원 수요 상황에서 데이터 센터 및 컴퓨팅 리소스를 사전 계획하여 투자하지 않고, 필요한 시점에 사용한 만큼 비용을 지불
+
+-   규모의 경제에서 얻는 이점
+
+    -   소규모의 IT 자원을 직접 구축할 경우 부수적인 투자비가 소요, 필요한 시점에 필요한 리소스를 사용할 수 없음
+    -   대규모로 미리 준비되어 있는 클라우드에서는 규모의 경제이기에 가능한 이점들이 고객 혜택으로 돌아감
+
+-   지속적인 기술 혁신 및 적용
+
+    -   클라우드 사업자는 지속적인 기술 혁신을 통해 더욱 새로운 서비스 상품을 제공
+
+-   빠른 프로비저닝 및 유연한 확장
+
+    -   클라우드에서는 몇 번의 클릭으로 단 몇 분만에 서버를 확보, 이는 직접 데이터 센터에 서버를 설치하는 것에 비해 시간과 비용 절감. 언제든지 확장 가능을 의미
+
+-   인프라 유지 관리에 대한 부담 제거
+    -   안정적이고 안전하게 운영되는 클라우드를 사용하여 인프라 유지 관리의 부담을 잊고 사업의 핵심에 집중
+
+## 클라우드 컴퓨팅 유형
+
+-   IaaS(Infrastructure): 서비스로의 인프라 일반적인 Computing, Networking, Storage등의 IT 리소스를 서비스 형태로 사용
+-   CaaS(Container): OS레벨이 아닌 컨테이너 레벨의 기능을 서비스 형태로 제공
+-   PaaS(Application): 기본 인프라(서버, 네트워크, 스토리지 등)을 직접 관리하지 않으며 다양한 플랫폼 소프트웨어들을 서비스 형태로 사용
+-   FaaS(Function): 컴퓨팅 리소스를 서버 단위가 아닌 기능 단위로 실행, 서버 관리와 구성을 직접 하지 않고도 어플리케이션을 수행할 수 있음
+-   SaaS(Software): 완제품 형태로 제공되는 소프트웨어
+
+인프라 상품군: Server
+플랫폼 상품군: DB, Analytics, Media, Game
+서비스, 애플리케이션 상품군: AI Service, Dev Tools, ApplicationService
+관리, 보안 상품군: Management, Security
