post naver cloud

--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -20,7 +20,9 @@ last_modified_at: 2024-04-07
 
 ### TCP/IP
 
-![이미지 사진]()
+<p align = "center">
+    <img src="/assets/images/NCP/3-1.png" width="90%">
+</p>
 
 -   네트워크 계층
     -   물리적인 인터페이스
@@ -43,6 +45,10 @@ Sequence Number
 Acknowledgment Number
 
 ### CIDR(Classless Inter-Domain Routing)
+
+<p align = "center">
+    <img src="/assets/images/NCP/3-2.png" width="90%">
+</p>
 
 -   Classful Addressing
     -   인터넷상의 IP주소를 규격화된 크기로 구분하는 방식
