--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -18,6 +18,10 @@ last_modified_at: 2024-04-05
 
 ## 클라우드 역사
 
+<p align = "center">
+    <img src="/assets/images/NCP/1-3.png" width="90%">
+</p>
+
 -   1960년대 가상화라는 용어 사용
     -   당시에는 전 가상화 기법을 사용하여 구현
     -   에뮬레이터도 존재
@@ -62,3 +66,36 @@ last_modified_at: 2024-04-05
 플랫폼 상품군: DB, Analytics, Media, Game
 서비스, 애플리케이션 상품군: AI Service, Dev Tools, ApplicationService
 관리, 보안 상품군: Management, Security
+
+## 가상화 기술
+
+<p align = "center">
+    <img src="/assets/images/NCP/1-2.png" width="90%">
+</p>
+
+-   전가상화
+    -   하드웨어 전체를 가상화하는 방식
+    -   하드웨어를 관리하는 하이퍼바이저가 VM들에게 하드웨어 리소스를 할당하는 방식
+    -   하이퍼바이저가 모든 리소스를 관리하는 만큼 성능적으로 오버헤드 발생
+    -   VM은 일반적인 OS를 그대로 사용
+-   반가상화
+    -   전가상화의 성능 저하를 해결하고자 모든 명령에 대해 DOM0를 통해 요청하는 방식이 아닌 하이퍼 콜을 통해 직접 요청
+    -   하이퍼콜을 사용하기 위해서는 VM의 OS가 이를 지원해야함
+
+### Hyper Visor
+
+-   하드웨어와 VM사이에 VM과 하드웨어를 관리하기 위한 가상화 관리 소프트웨어
+
+<p align = "center">
+    <img src="/assets/images/NCP/1-1.png" width="90%">
+</p>
+
+Type1, Type2로 나뉘어짐
+
+Type1: Xen, Hyper-V, KVM
+Type2: VMWare, VirtualBox
+
+## 참조
+
+https://www.sharedit.co.kr/posts/5611  
+https://www.edwith.org/ncloudprofessional/lecture/173845?isDesc=false
