update ncp post

--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -18,6 +18,63 @@ last_modified_at: 2024-04-08
 
 ## DB
 
+# Storage 서비스
+
+    - Object Storage: 인터넷 상에 데이터를 저장하고 사용할 수 있도록 구축된 오브젝트 스토리지
+    	- 객체 기반의 무제한 파일 저장 스토리지
+    	- 콘솔, RESTful API, SDK 등의 다양한 방법으로 오브젝트 관리, 저장된 파일은 각 파일마다 고유한 접근 URL이 부여되어 쉽게 접근 가능
+    	- 정적 웹 사이트 호스팅 가능
+
+    - Archive Storage: 데이터 아카이빙 및 장기 백업에 최적화된 스토리지 서비스
+    	- Infrequent Data 백업 및 Archiving Data 보관을 주 목적으로 하는 스토리지
+    	- Object Storage보다 데이터 저장 비용은 저렴, 데이터 처리 API 비용은 비쌈
+
+    - NAS: 다수의 서버에서 공유하여 사용할 수 있는 스토리지
+    	- 최소 500GB에서 10TB까지 구성 추가는 100GB 단위로 추가가능
+    	- NAS 가용량 안에서 생성된 스냅샷 이미지를 이용해 데이터에 대한 복구 기능
+    	- 서버 사설 IP를 이용한 ACL 오픈으로 타 계정 서버에도 마운트하여 사용 가능
+
+    - Data Teleporter: 대용량 데이터 이전을 위한 효과적인 솔루션
+
+특정 기간이 지나면 object 스토리지 내용을 아카이브 스토리지로 전송하는 등 설정 가능
+
+# 클라우드 데이터베이스
+
+-   Cloud DB for MySQL
+
+자동 Fail-Over지원 및 사용자 환경에 맞는 구성 가능
+
+    - 최대 32VCPU 256GB 메모리 지원, 2TB 자동 디스크 확장
+    - 자동 Fail-Over를 지원하며 최대 5대까지 복제 Slave(Read only) 확장 가능
+    - private Load Balancer를 이용해서 Read 부하 분산 가능
+    - 자동 백업 주기를 설정할 수 있으며, 최대 30일 백업 파일 보관
+
+
+    - Master DB Failover
+    	- 콘솔에서 수동으로 FailOver를 실행할 수 있음
+    	- 서비스 오픈 전에 Master DB 장애로 FailOver가 발생하는 상황을 재현하여 Application에 영향이 없는지 사전에 점검할 수 있음
+    - DB Process 모니터링
+    	- DB Server 연결하여 수행 중인 Query를 확인할 수 있음
+    	- Slow Query로그 외에도 특정 시점에 어떤 Query가 수행 중인지 확인하여 DB 상태 점검에 도움
+    - Stand Alone 백업
+    	- Stand Alone 서버도 DB백업을 사용할 수 있음
+    	- 데이터가 삭제되어도 백업 보관일 설정 내에서 백업으로 데이터를 복구 할 수 있음
+
+-   Cloud DB for Redis
+
+-   자동 복구를 통해 안정적으로 운영되는 완전 관리형 클라우드 인메모리 캐시 서비스
+
+    -   Redis가 제공하지 않는 자동 Fail-over 기능을 독자적으로 개발하여 제공함으로써 장애 발생 시에도 안정적인 서비스 제공
+    -   설치 후 Redis와 OS모니터링을 이용할 수 있으며 장애 또는 이벤트 발생 시 사용자의 메일, SMS로 장애 알람
+    -   네이버 서비스에서 오랜 시간 검증된 Redis 설정을 기본으로 지원
+
+-   Cloud DB for MS-SQL
+
+    -   네이버 서비스에서 검증된 최적화된 설정을 통해 안정적 운영, 장애가 발생하면 자동 복구
+    -   안정적인 서비스 제공을 위해 장애 발생 시 자동 Fail-over 기능 제공
+    -   설치 후 즉시 MSSQL과 OS 모니터링을 이용, MSSQL의 동작 상황을 그래프를 통해 확인 가능
+    -   1분 단위의 쿼리 레벨 성능 분석을 지원 서비스 성능과 안정성을 향상
+
 ## Management
 
 ## Analytics
