--- a/_posts/CloudComputing/NaverCloud/2024-04-10-VPC.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-10-VPC.md
@@ -1,6 +1,6 @@
 ---
 title: '\[NCP 실습\] VPC생성과 Subnet 생성'
-excerpt: ''
+excerpt: 'VPC, Subnet 생성'
 
 categories:
     - 'Naver Cloud Platform'
@@ -15,3 +15,68 @@ toc_sticky: true
 date: 2024-04-10
 last_modified_at: 2024-04-10
 ---
+
+## VPC(Virtual Private Cloud)
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-1.png" width="90%">
+</p>
+
+-   각각의 사용자가 Public Cloud 안에 가상의 사설 네트워크를 구성
+    -   VPC 내부에 클라우드 인프라 구축
+
+### VPC 비용
+
+-   VPC 비용은 사설 IP를 활용하여 VPC간 통신이 발생할때만 비용을 청구한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-2.png" width="90%">
+</p>
+
+### VPC/Subnet/Server 생성 실습 과정
+
+<span style="color:red"> 1. VPC 생성 </span>
+<span style="color:red"> 2. VPC 내에 단일 Public Subnet 구성 => 서버에 Public IP 부여 가능 </span>
+<span style="color:red"> 3. Network ACL 생성 및 설정 </span>
+\4. Subnet 안에 리눅스 가상 서버 생성(Init Script로 Apache 웹 서버 설치)
+\5. ACG 생성 및 설정
+\6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능
+\7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지
+\8. 관리자 비밀번호 확인
+\9. ssh를 통한 서버 접속
+
+## VPC 생성
+
+-   클라우드 내의 계정 전용 사설 네트워크 공간
+-   하나의 메인 계정에 `리전당 3개`까지 생성 가능
+
+vpc
+
+normal VPC: 서비스를 구성하기 위한 일반적인 VPC
+TRANSIT VPC: Service Function Chain을 구성하기 위한 VPC. Transit VPC는 VPC와 VPC, VPC와 인터넷, VPC와 온프라미스 간 네트워크 상호 연결을 위한 네트워크 허브 역할을 하는 VPC. Endpoint Route, Transit VPC와 연계하여 라우팅을 통해서 각 영역 간 연결 제어 가능
+
+## Subnet 생성
+
+-   subnet 이름 지정
+-   소속 VPC 지정
+-   IP 주소 범위: vpc의 IP 대역의 부분집합 범위
+-   Internet Gateway 전용 여부: 외부에서의 접근 가능 여부 - Y
+-   용도: Subnet의 용도 선택 - 일반
+
+## Network ACL 생성 및 적용
+
+VPC - Network ACL - ACL Rule 선택
+
+-   Network ACL
+    -   Subnet 단위로 적용되는 보안 규칙
+    -   Default All Permit(기본적으로 모두 허용)
+    -   Allow(허용) 또는 Deny(차단) 규칙 적용
+    -   우선 순위에 따른 규칙 반영
+
+subnet을 하나 만들면 default로 생성됨
+
+### subnet의 Network ACL 적용
+
+새로 ACL을 생성했으면 Subnet Management 클릭
+
+적용하고자 하는 subnet을 클릭
