post image update

--- a/_posts/CloudComputing/NaverCloud/2024-04-10-VPC.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-10-VPC.md
@@ -7,7 +7,7 @@ categories:
 tags:
     - [NCP, Cloud]
 
-permalink: /NaverCloud/6
+permalink: /NaverCloud/ex/1
 
 toc: true
 toc_sticky: true
@@ -38,14 +38,37 @@ last_modified_at: 2024-04-09
 <span style="color:red"> 1. VPC 생성 </span>  
 <span style="color:red"> 2. VPC 내에 단일 Public Subnet 구성 => 서버에 Public IP 부여 가능 </span>  
 <span style="color:red"> 3. Network ACL 생성 및 설정 </span>  
-<span>4. Subnet 안에 리눅스 가상 서버 생성(Init Script로 Apache 웹 서버 설치) </span>
-<span>5. ACG 생성 및 설정 </span>  
-<span>6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능 </span>  
-<span>7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지 </span>  
-<span>8. 관리자 비밀번호 확인 </span>  
-<span>9. ssh를 통한 서버 접속</span>
+<span> 4. Subnet 안에 리눅스 가상 서버 생성(Init Script로 Apache 웹 서버 설치) </span>  
+<span> 5. ACG 생성 및 설정 </span>  
+<span> 6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능 </span>  
+<span> 7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지 </span>  
+<span> 8. 관리자 비밀번호 확인 </span>  
+<span> 9. ssh를 통한 서버 접속</span>
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-2.png" width="90%">
+</p>
 
 ## VPC 생성
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-3.png" width="90%">
+</p>
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-4.png" width="90%">
+</p>
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-5.png" width="90%">
+</p>
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-6.png" width="90%">
+</p>
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-7.png" width="90%">
+</p>
+<p align = "center">
+    <img src="/assets/images/NCP/ex1-8.png" width="90%">
+</p>
 
 -   클라우드 내의 계정 전용 사설 네트워크 공간
 -   하나의 메인 계정에 `리전당 3개`까지 생성 가능
