--- a/_posts/CloudComputing/NaverCloud/2024-04-10-VPC.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-10-VPC.md
@@ -24,6 +24,8 @@ last_modified_at: 2024-04-09
 
 -   각각의 사용자가 Public Cloud 안에 가상의 사설 네트워크를 구성
     -   VPC 내부에 클라우드 인프라 구축
+-   클라우드 내의 계정 전용 사설 네트워크 공간
+-   하나의 메인 계정에 `리전당 3개`까지 생성 가능
 
 ### VPC 비용
 
@@ -51,32 +53,41 @@ last_modified_at: 2024-04-09
 
 ## VPC 생성
 
+-   웹 콘솔 좌측 사이드바에 Services 목록 클릭
 <p align = "center">
     <img src="/assets/images/NCP/ex1-3.png" width="90%">
 </p>
+
+-   Networking 목록의 VPC 클릭
 <p align = "center">
     <img src="/assets/images/NCP/ex1-4.png" width="90%">
 </p>
+
+-   VPC를 생성할 Region을 좌측 사이드바에서 선택
 <p align = "center">
     <img src="/assets/images/NCP/ex1-5.png" width="90%">
 </p>
+
+-   VPC 생성 클릭
 <p align = "center">
     <img src="/assets/images/NCP/ex1-6.png" width="90%">
 </p>
+
+-   VPC 생성에 필요한 입력값 작성
+    -   VPC 이름: 구별자
+    -   IP 주소 범위: 생성할 VPC가 가지는 IP 주소 범위
+    -   유형
+        -   NORMAL: 서비스를 구성하기 위한 일반적인 VPC
+        -   TRANSIT: Service Function Chain을 구성하기 위한 VPC. Transit VPC는 VPC와 VPC, VPC와 인터넷, VPC와 온프라미스 간 네트워크 상호 연결을 위한 네트워크 허브 역할을 하는 VPC. Endpoint Route, Transit VPC와 연계하여 라우팅을 통해서 각 영역 간 연결 제어 가능
+
 <p align = "center">
     <img src="/assets/images/NCP/ex1-7.png" width="90%">
 </p>
+
+-   생성된 VPC 확인
 <p align = "center">
     <img src="/assets/images/NCP/ex1-8.png" width="90%">
 </p>
-
--   클라우드 내의 계정 전용 사설 네트워크 공간
--   하나의 메인 계정에 `리전당 3개`까지 생성 가능
-
-vpc
-
-normal VPC: 서비스를 구성하기 위한 일반적인 VPC
-TRANSIT VPC: Service Function Chain을 구성하기 위한 VPC. Transit VPC는 VPC와 VPC, VPC와 인터넷, VPC와 온프라미스 간 네트워크 상호 연결을 위한 네트워크 허브 역할을 하는 VPC. Endpoint Route, Transit VPC와 연계하여 라우팅을 통해서 각 영역 간 연결 제어 가능
 
 ## Subnet 생성
 
