update ncp post

--- a/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
@@ -7,7 +7,7 @@ categories:
 tags:
     - [NCP, Cloud]
 
-permalink: /NaverCloud/7
+permalink: /NaverCloud/ex/3
 
 toc: true
 toc_sticky: true
@@ -15,6 +15,18 @@ toc_sticky: true
 date: 2024-04-10
 last_modified_at: 2024-04-10
 ---
+
+## VPC/Subnet/Server 생성 실습 과정
+
+<span> 1. VPC 생성 </span>  
+<span> 2. VPC 내에 단일 Public Subnet 구성 => 서버에 Public IP 부여 가능 </span>  
+<span> 3. Network ACL 생성 및 설정 </span>  
+<span style="color:red"> 4. Subnet 안에 리눅스 가상 서버 생성(Init Script로 Apache 웹 서버 설치) </span>  
+<span style="color:red"> 5. ACG 생성 및 설정 </span>  
+<span> 6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능 </span>  
+<span> 7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지 </span>  
+<span> 8. 관리자 비밀번호 확인 </span>  
+<span> 9. ssh를 통한 서버 접속</span>
 
 ## Init Script 생성
 
