--- a/_posts/CloudComputing/NaverCloud/2024-04-09-VPC.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-09-VPC.md
@@ -1,6 +1,6 @@
 ---
-title: '\[NCP 실습\] VPC생성과 Subnet 생성'
-excerpt: 'VPC, Subnet 생성'
+title: '\[NCP 실습\] VPC생성'
+excerpt: 'VPC'
 
 categories:
     - 'Naver Cloud Platform'
@@ -38,18 +38,14 @@ last_modified_at: 2024-04-09
 ### VPC/Subnet/Server 생성 실습 과정
 
 <span style="color:red"> 1. VPC 생성 </span>  
-<span style="color:red"> 2. VPC 내에 단일 Public Subnet 구성 => 서버에 Public IP 부여 가능 </span>  
-<span style="color:red"> 3. Network ACL 생성 및 설정 </span>  
+<span> 2. VPC 내에 단일 Public Subnet 구성 => 서버에 Public IP 부여 가능 </span>  
+<span> 3. Network ACL 생성 및 설정 </span>  
 <span> 4. Subnet 안에 리눅스 가상 서버 생성(Init Script로 Apache 웹 서버 설치) </span>  
 <span> 5. ACG 생성 및 설정 </span>  
 <span> 6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능 </span>  
 <span> 7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지 </span>  
 <span> 8. 관리자 비밀번호 확인 </span>  
 <span> 9. ssh를 통한 서버 접속</span>
-
-<p align = "center">
-    <img src="/assets/images/NCP/ex1-2.png" width="90%">
-</p>
 
 ## VPC 생성
 
