--- a/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
@@ -28,12 +28,26 @@ last_modified_at: 2024-04-10
 <span> 8. 관리자 비밀번호 확인 </span>  
 <span> 9. ssh를 통한 서버 접속</span>
 
-## Init Script 생성
+## Init Script
 
 -   Server 생성 시 실행될 스크립트 관리
 -   Init Script는 Server 생성 초기에 `단 1회` 실행
 -   Server 초기화를 빠르고 편리하게 구성 가능
 -   같은 용도의 여러 Server 일괄 생성 시 유용
+
+### Init Script 생성
+
+웹 콘솔에서 Server -> Init Script 선택
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-1.png" width="90%">
+</p>
+
+Script 생성 버튼 클릭
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-2.png" width="90%">
+</p>
 
 ## Server 생성
 
