--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -79,7 +79,7 @@ last_modified_at: 2024-04-05
     -   하이퍼바이저가 모든 리소스를 관리하는 만큼 성능적으로 오버헤드 발생
     -   VM은 일반적인 OS를 그대로 사용
 -   반가상화
-    -   전가상화의 성능 저하를 해결하고자 모든 명령에 대해 DOM0를 통해 요청하는 방식이 아닌 하이퍼 콜을 통해 직접 요청
+    -   전가상화의 성능 저하를 해결하고자 모든 명령에 대해 하이퍼바이저(DOM0)를 통해 요청하는 방식이 아닌 하이퍼 콜을 통해 직접 요청
     -   하이퍼콜을 사용하기 위해서는 VM의 OS가 이를 지원해야함
 
 ### Hyper Visor
