--- a/_posts/CloudComputing/NaverCloud/2024-04-09-VPC.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-09-VPC.md
@@ -1,6 +1,6 @@
 ---
 title: '\[NCP 실습\] VPC생성'
-excerpt: 'VPC'
+excerpt: 'VPC 생성 실습'
 
 categories:
     - 'Naver Cloud Platform'
@@ -84,29 +84,3 @@ last_modified_at: 2024-04-09
 <p align = "center">
     <img src="/assets/images/NCP/ex1-8.png" width="90%">
 </p>
-
-## Subnet 생성
-
--   subnet 이름 지정
--   소속 VPC 지정
--   IP 주소 범위: vpc의 IP 대역의 부분집합 범위
--   Internet Gateway 전용 여부: 외부에서의 접근 가능 여부 - Y
--   용도: Subnet의 용도 선택 - 일반
-
-## Network ACL 생성 및 적용
-
-VPC - Network ACL - ACL Rule 선택
-
--   Network ACL
-    -   Subnet 단위로 적용되는 보안 규칙
-    -   Default All Permit(기본적으로 모두 허용)
-    -   Allow(허용) 또는 Deny(차단) 규칙 적용
-    -   우선 순위에 따른 규칙 반영
-
-subnet을 하나 만들면 default로 생성됨
-
-### subnet의 Network ACL 적용
-
-새로 ACL을 생성했으면 Subnet Management 클릭
-
-적용하고자 하는 subnet을 클릭
