--- a/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
@@ -23,12 +23,12 @@ last_modified_at: 2024-04-10
 <span> 3. Network ACL 생성 및 설정 </span>  
 <span style="color:red"> 4. Subnet 안에 리눅스 가상 서버 생성(Init Script로 Apache 웹 서버 설치) </span>  
 <span style="color:red"> 5. ACG 생성 및 설정 </span>  
-<span> 6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능 </span>  
-<span> 7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지 </span>  
-<span> 8. 관리자 비밀번호 확인 </span>  
-<span> 9. ssh를 통한 서버 접속</span>
+<span style="color:red"> 6. 가상 서버에 Public IP 부여 => 외부에서 Public IP를 통한 서버 접근 가능 </span>  
+<span style="color:red"> 7. 외부 접속 확인 - Apache 웹 서버 디폴트 페이지 </span>  
+<span style="color:red"> 8. 관리자 비밀번호 확인 </span>  
+<span style="color:red"> 9. ssh를 통한 서버 접속</span>
 
-## Init Script
+## Init Script 서비스
 
 -   Server 생성 시 실행될 스크립트 관리
 -   Init Script는 Server 생성 초기에 `단 1회` 실행
@@ -49,7 +49,23 @@ Script 생성 버튼 클릭
     <img src="/assets/images/NCP/ex3-2.png" width="90%">
 </p>
 
-## Server 생성
+Init Script 입력값 작성
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-3.png" width="90%">
+</p>
+
+-   Script 이름: 구별자
+-   OS 타입: 스크립트를 사용할 서버 OS
+-   Script: 서버 최초 생성 시 실행할 스크립트 작성
+
+모든 값을 작성 했으면 Script 생성
+
+## Server 서비스
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-4.png" width="90%">
+</p>
 
 -   Subnet 내부에 속하는 가상머신
 -   필요에 따라 사양 및 OS 선택 가능
@@ -109,7 +125,7 @@ ICMP -> 접근 소스(목적지): 0.0.0.0/0
 
 Server- public IP 선택
 
-## Server 외부 접속 1
+## Server 외부 접속
 
 ### 외부 접속 확인 - Apache 웹 서버 동작 확인
 
@@ -121,7 +137,7 @@ Server- public IP 선택
 -   NACL, ACG의 규칙 및 적용 여부 체크
 -   입력된 IP 주소가 공인(Public이 맞는지 체크)
 
-## Server 외부 접속 2
+## Server 외부 접속 - ssh를 통한 접속
 
 서버 선택 -> 서버 관리 및 설정 변경 선택 -> 관리자 비밀번호 확인 클릭
 
