--- a/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-11-Server.md
@@ -12,8 +12,8 @@ permalink: /NaverCloud/ex/3
 toc: true
 toc_sticky: true
 
-date: 2024-04-10
-last_modified_at: 2024-04-10
+date: 2024-04-11
+last_modified_at: 2024-04-11
 ---
 
 ## VPC/Subnet/Server 생성 실습 과정
@@ -71,36 +71,75 @@ Init Script 입력값 작성
 -   필요에 따라 사양 및 OS 선택 가능
 -   Public Subnet에 속할 경우 서버에 Public IP 부여 가능
 
-vpc, subnet 선택: 서버가 속할 VPC, subnet 선택
+Server - Server 선택 - Server 생성 클릭
 
-요금제 선택: 시간 요금제 (비용 고려)
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-5.png" width="90%">
+</p>
 
+서버를 최초로 생성할 경우 콘솔 창을 선택하는 화면이 나타난다. 우리는 기존 콘솔 화면을 선택하여 실습을 진행한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-6.png" width="90%">
+</p>
+
+### 서버 생성
+
+서버 이미지 생성
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-7.png" width="90%">
+</p>
+
+-   부팅 디스크 크기: 저장 용량 설정
+-   이미지 타입: 서버의 용도에 맞게 서버 이미지
+-   OS 이미지 타입: OS 종류 선택
+-   서버 타입: 네이버 클라우드가 제공하는 서버 서비스 타입 설정
+
+서버의 추가적인 설정 정의
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-8.png" width="90%">
+</p>
+- vpc, subnet 선택: 서버가 속할 VPC, subnet 선택
+- 스토리지 종류: 부팅 디스크 종류 정의
+- 서버 세대: g1, g2, g3
+- 서버 타입: CPU core 개수, 메모리 크기 정의
 서버이름 작성
+- 요금제 선택: 시간 요금제 (비용 고려)
+- 서버 개수: 생성할 서버 개수
+- 서버 이름: 구별자
+- Network Interface
+  - 서버에 할당할 수 있는 네트워크 인터페이스를 생성하는 서비스입니다. 네트워크 인터페이스가 적용된 서버들은 서브넷을 사용하여 독립된 네트워크 통신이 가능
+  - Network Interface: IP란에 10.0.0.10 입력후 [+ 추가]
+  - subnet의 IP 범위 내에서 주소 지정(IP 미입력시 자동 할당)
+  - NIC(Network Interface)는 서버당 최대 3개까지 추가 가능(Private Subnet인 경우 해당)
+- 공인 IP: 외부 통신 IP 생성
 
-Network Interface: IP란에 10.0.0.10 입력후 [+ 추가]
-subnet의 IP 범위 내에서 주소 지정(IP 미입력시 자동 할당)
-NIC(Network Interface)는 서버당 최대 3개까지 추가 가능(Private Subnet인 경우 해당)
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-9.png" width="90%">
+</p>
+- Script 선택 : init-apache-install
+  - 서버 생성 시 적용할 스크립트 선택
+- 나머지 항목은 Default 값 선택
 
-Script 선택 : init-apache-install
-서버 생성 시 적용할 스크립트 선택
-
-나머지 항목은 Default 값 선택
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-10.png" width="90%">
+</p>
 
 -   인증키 설정
+    -   초기 관리자 비밀번호 확인 가능
+    -   이전에 생성한 인증키를 사용할 경우 보유하고 있는 인증키 이용 선택
+    -   새로운 인증키 생성시 pem 확장자 파일 다운로드 됨
 
-초기 관리자 비밀번호 확인 가능
-이전에 생성한 인증키를 사용할 경우 보유하고 있는 인증키 이용 선택
-
-새로운 인증키 생성
-pem 확장자 파일 다운로드 됨
-
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-11.png" width="90%">
+</p>
 -   네트워크 접근 설정
--   최종확인: 서버생성 클릭
--
 
-## ACG 생성 및 적용
+최종 확인 후 서버 생성
 
-### ACG(Access Control Group)
+## ACG(Access Control Group)
 
 -   서버 단위로 적용되는 보안 규칙(서버 방화벽)
 -   Default All Deny(기본적으로 모두 거부)
@@ -110,40 +149,121 @@ pem 확장자 파일 다운로드 됨
 
 ### ACG(Access Control Group) 생성
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-12.png" width="90%">
+</p>
 Server -> ACG 선택
+ACG 리스트를 확인하면 Server를 생성하면서 자동 생성된 Default ACG가 존재함.
+새로운 ACG 생성
 
-NACL과 달리 ACG는 Allow(허용) 규칙만 적용
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-13.png" width="90%">
+</p>
 
-Inbound/ Outbound에 대해 다음과 같이 규칙을 입력하고(모든 통신 허용)
+-   ACG 이름: 구별자
+-   VPC: 적용될 VPC 지정
 
-TCP/UDP -> 접근 소스(목적지): 0.0.0.0/0 허용포트: 1-65535
-ICMP -> 접근 소스(목적지): 0.0.0.0/0
+ACG가 생성되었으면 규칙을 추가할 필요가 있다.
+
+-   NACL과 달리 ACG는 Allow(허용) 규칙만 적용
+-   Inbound/ Outbound에 대해 다음과 같이 규칙을 입력한다.
+    -   (모든 통신 허용) TCP/UDP -> 접근 소스(목적지): 0.0.0.0/0 허용포트: 1-65535
+    -   ICMP -> 접근 소스(목적지): 0.0.0.0/0
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-14.png" width="90%">
+</p>
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-15.png" width="90%">
+</p>
+
+설정한 ACG를 서버에 넣어준다.
+서버 선택 -> NIC -> ACG 수정
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-16.png" width="90%">
+</p>
+
+ACG는 여러개 설정 가능하다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-17.png" width="90%">
+</p>
 
 ## public IP 생성 및 적용
 
+서버가 외부 네트워크와 통신하기 위해서 공인 IP 발급 및 적용이 필요하다.
+
 ### public IP 생성
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-18.png" width="90%">
+</p>
+
 Server- public IP 선택
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-19.png" width="90%">
+</p>
+공인 IP 생성 선택
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-20.png" width="90%">
+</p>
+적용할 서버 선택 후 생성
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-21.png" width="90%">
+</p>
+공인 IP 생성됨
+
+### 공인 IP 요금
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-22.png" width="90%">
+</p>
 
 ## Server 외부 접속
 
 ### 외부 접속 확인 - Apache 웹 서버 동작 확인
 
+서버에서 접속할 서버의 공인 IP를 체크
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-23.png" width="90%">
+</p>
+
 -   사용 중인 PC의 웹 브라우저에서 `http://[서버공인 IP]` 를 입력하여 아파치 웹 서버의 디폴트 페이지 확인
 
-만약 보이지 않다면
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-24.png" width="90%">
+</p>
 
--   init Script 오탈자 확인
--   NACL, ACG의 규칙 및 적용 여부 체크
--   입력된 IP 주소가 공인(Public이 맞는지 체크)
+-   만약 보이지 않다면 다음 사항을 체크
+    -   init Script 오탈자 확인
+    -   NACL, ACG의 규칙 및 적용 여부 체크
+    -   입력된 IP 주소가 공인(Public이 맞는지 체크)
 
 ## Server 외부 접속 - ssh를 통한 접속
 
 서버 선택 -> 서버 관리 및 설정 변경 선택 -> 관리자 비밀번호 확인 클릭
 
-인증키 드래그 앤 드롭
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-25.png" width="90%">
+</p>
 
-관리자 비밀번호 확인
+인증키 드래그 앤 드롭이나 파일 탐색기를 통해 인증키 넣기
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-26.png" width="90%">
+</p>
+
+관리자 비밀번호 확인 후 터미널에 명령어 입력
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex3-27.png" width="90%">
+</p>
 
 ```bash
 $ ssh root@{서버 공인 IP 주소}
