--- a/_posts/TroubleShooting/2023-09-30-static.md
+++ b/_posts/TroubleShooting/2023-09-30-static.md
@@ -24,7 +24,8 @@ Java로 개발 도중에 발생하는 버그
 
 ## 해결법
 
-문제 원인은 간단한 오타로 **생성한 변수가 아닌 클래스 이름을 그대로 사용함으로서 발생하는 버그**이다. 해당 클래스 명을 생성한 인스턴스의 변수 명으로 변경하여 해결하면 된다. ~~은근히 한번씩 실수하는 문제이다.~~
+문제 원인은 간단한 오타로 **생성한 변수가 아닌 클래스 이름을 그대로 사용함으로서 발생하는 버그**이다. 그로인해 static으로 인식해서 발생.
+사용하는 변수 명을 생성한 인스턴스의 변수 이름으로 변경하여 해결하면 된다. ~~인텔리 제이의 자동완성 기능으로 인해 자주 실수하는 문제~~
 
 클래스 명과 동일한 변수 명을 사용하는 것을 최대한 피하자!
 
