--- a/_posts/CloudComputing/NaverCloud/2024-04-13-disk용량증설.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-13-disk용량증설.md
@@ -1,43 +1,62 @@
 ---
 title: '\[NCP 실습\] 디스크 용량 증설'
-excerpt: 'Server 생성'
+excerpt: '디스크 용량 크기 증설'
 
 categories:
     - 'Naver Cloud Platform'
 tags:
     - [NCP, Cloud]
 
-permalink: /NaverCloud/ex/5
+permalink: /NaverCloud/ex/6
 
 toc: true
 toc_sticky: true
 
-date: 2024-04-10
-last_modified_at: 2024-04-10
+date: 2024-04-13
+last_modified_at: 2024-04-13
 ---
 
 ## 디스크 용량 증설
 
-기존 SSD (20GB)에서 10GB 더 추가
+기존 SSD (20GB)에서 10GB 더 추가를 목표로 한다.
 
--   서버 정지
+### 서버 정지
+
+우선 용량을 증가시킬 SSD의 서버를 정지시키는 과정일 필요하다. ssh로 연결된 서버에 다음 명령어를 입력하거나 웹 콘솔에서 서버 정지를 선택
 
 ```bash
 $ shutdown -f now
 ```
 
+### 디스크 용량 늘리기
+
 -   server -> Storage 선택
 
 용량을 늘릴 디스크 선택
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-1.png" width="90%">
+</p>
 디스크의 용량을 늘리기 전에 먼저 서버에서 해제
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-2.png" width="90%">
+</p>
 스토리지 변경 클릭
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-3.png" width="90%">
+</p>
 스토리지 크기는 늘릴 수만 있음(줄이지는 못함)
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-4.png" width="90%">
+</p>
 스토리지를 다시 서버에 연결
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-5.png" width="90%">
+</p>
 확인 결과 xvdb용량이 30G로 커짐을 확인 -> 이전에 생성된 파티션의 용량은 그대로
 
 ### 기존 파티션에 늘어난 용량 적용
@@ -61,6 +80,10 @@ $ df -h
 # 마운트 용량은 9.8G로 적용되지 않음
 ```
 
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-6.png" width="90%">
+</p>
+
 늘어난 용량 적용하기 위해 작업 수행
 
 파일 시스템에 따라 사용하는 툴이 조금씩 다를 수 있다.
@@ -78,5 +101,9 @@ $ resize2fs /dev/xvdb2
 $ mount /dev/xvdb2 /mnt/part2
 $ df -h
 ```
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex6-7.png" width="90%">
+</p>
 
 확인 시 정상적으로 20G가 마운트 됨
