--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -34,7 +34,7 @@ last_modified_at: 2024-04-05
 
 ## 클라우드 컴퓨팅 장점
 
--   CAPEX를 OPEX로 대체
+-   CAPEX(설비 투자 비용)를 OPEX(운영 지출)로 대체
 
     -   클라우드를 사용하면 유동적인 IT 자원 수요 상황에서 데이터 센터 및 컴퓨팅 리소스를 사전 계획하여 투자하지 않고, 필요한 시점에 사용한 만큼 비용을 지불
 
