--- a/_posts/CloudComputing/NaverCloud/2024-04-13-disk용량증설.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-13-disk용량증설.md
@@ -68,7 +68,7 @@ $ apt-get install cloud-guest-utils
 # 클라우드 인스턴스에서 유용한 프로그램이 포함된 패키지 growpart를 이용하여 파티션의 크기를 조정
 
 $ growpart /dev/xvdb 2
-# /dev/xvdb 디스크의 2번째 파티션 크기 조정 -> 첫번째 파티션은 크기가 늘어나지 않음
+# /dev/xvdb 디스크의 2번째 파티션 크기 조정 -> 첫번째 파티션은 메모리 구조 상 크기가 늘어나지 않음
 
 $ lsblk
 # xvdb2의 파티션 크기는 20GB 적용됨
@@ -106,4 +106,4 @@ $ df -h
     <img src="/assets/images/NCP/ex6-7.png" width="90%">
 </p>
 
-확인 시 정상적으로 20G가 마운트 됨
+확인 시 확장된 크기인 20G가 마운트 됨
