--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -16,21 +16,18 @@ date: 2024-04-05
 last_modified_at: 2024-04-05
 ---
 
-## 클라우드 역사
+## 목차
 
-<p align = "center">
-    <img src="/assets/images/NCP/1-3.png" width="90%">
-</p>
+-   클라우드 컴퓨팅 개념과 사용상의 장점
+-   클라우드 서비스의 유형
+-   Naver Cloud Platform의 특징
+-   Naver Cloud Platform의 주요 서비스 및 상품들
+-   클라우드 관리 콘솔 개요
 
--   1960년대 가상화라는 용어 사용
-    -   당시에는 전 가상화 기법을 사용하여 구현
-    -   에뮬레이터도 존재
--   다양한 하이퍼바이저의 출현
-    -   IBM의 Logical Partition
-    -   VMWare
-    -   Xen
-    -   KVM
-    -   Hyper-V
+## 클라우드 컴퓨팅
+
+-   클라우드에서는 서버, 스토리지, 네트워킹 및 데이터베이스 등 다양한 인프라 서비스와 관리형 데이터베이스, 대용량 데이터 분석, 미디어 처리와 같은 플랫폼 서비스, 그리고 AI 기능이나 개발 도구, 비지니스 솔루션 등 어플리케이션 서비스 등이 제공됨. 아울러 다양한 관리도구와 보안 기능이 서비스로 제공
+-   이러한 서비스는 온디맨드로 필요할 때만 직접 생성해 수 분만에 사용할 수 있으며 종량 과금제가 적용됨.
 
 ## 클라우드 컴퓨팅 장점
 
@@ -58,7 +55,7 @@ last_modified_at: 2024-04-05
 
 -   IaaS(Infrastructure): 서비스로의 인프라 일반적인 Computing, Networking, Storage등의 IT 리소스를 서비스 형태로 사용
 -   CaaS(Container): OS레벨이 아닌 컨테이너 레벨의 기능을 서비스 형태로 제공
--   PaaS(Application): 기본 인프라(서버, 네트워크, 스토리지 등)을 직접 관리하지 않으며 다양한 플랫폼 소프트웨어들을 서비스 형태로 사용
+-   PaaS(Application): 기본 인프라(서버, 네트워크, 스토리지 등)을 직접 관리하지 않으며 다양한 플랫폼 소프트웨어(데이터베이스, AI, 빅데이터)들을 서비스 형태로 사용
 -   FaaS(Function): 컴퓨팅 리소스를 서버 단위가 아닌 기능 단위로 실행, 서버 관리와 구성을 직접 하지 않고도 어플리케이션을 수행할 수 있음
 -   SaaS(Software): 완제품 형태로 제공되는 소프트웨어
 
@@ -66,6 +63,31 @@ last_modified_at: 2024-04-05
 플랫폼 상품군: DB, Analytics, Media, Game
 서비스, 애플리케이션 상품군: AI Service, Dev Tools, ApplicationService
 관리, 보안 상품군: Management, Security
+
+## Naver Cloud Platform 특징
+
+-   세계적으로 인정받은 보안 기술
+-   다양한 서비스 플랫폼 기술
+-   국내 최대 IT 서비스의 안정적인 인프라
+-   쉽고 간편한 웹 기반 관리 도구
+-   글로벌 메이저급 인프라 품질
+-   24시간 365일 사용자 지원
+
+## 클라우드 역사
+
+<p align = "center">
+    <img src="/assets/images/NCP/1-3.png" width="90%">
+</p>
+
+-   1960년대 가상화라는 용어 사용
+    -   당시에는 전 가상화 기법을 사용하여 구현
+    -   에뮬레이터도 존재
+-   다양한 하이퍼바이저의 출현
+    -   IBM의 Logical Partition
+    -   VMWare
+    -   Xen
+    -   KVM
+    -   Hyper-V
 
 ## 가상화 기술
 
