--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -75,6 +75,17 @@ Acknowledgment Number
 
 ## 네이버 클라우드 제공 상품
 
+### VPC, Classic 플랫폼
+
+-   VPC 환경에서는 VPC를 이용하여 개인 계정만을 위한 논리적인 사설 망을 구축하며, 이용할 사설 IP을 원하는 대역으로 선택하여 만들 수 있음
+-   Classic 환경에서는 서버 생성 시 10.X.X.X 대역의 IP로 사설 IP를 랜덤 부여 받음
+
+-   특징
+    -   VPC 환경에서 서버 생성을 위해서는 반드시 Subnet을 생성해야 하며, 서버는 Subnet안에 생성됨.
+    -   Subnet은 외무와의 통신이 가능한 Public Subnet, 내부 통신만 가능한 Private Subnet으로 구분됨
+    -   서비스 환경에 맞는 다양한 로드 밸런서를 제공
+    -   이외에도 다양한 Network 서비스/ Global DNS, DNS+, Global CND이 제공됨
+
 ### Load Balancer
 
 -   LB의 구성 방식
