--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -16,25 +16,28 @@ date: 2024-04-08
 last_modified_at: 2024-04-08
 ---
 
-## DB
+## Database
 
-# Storage 서비스
+-   Cloud Db for MySQL,Cloud Db for MS-SQL,Cloud Db for Redis등의 관리형 데이터 베이스 상품들과,
 
-    - Object Storage: 인터넷 상에 데이터를 저장하고 사용할 수 있도록 구축된 오브젝트 스토리지
-    	- 객체 기반의 무제한 파일 저장 스토리지
-    	- 콘솔, RESTful API, SDK 등의 다양한 방법으로 오브젝트 관리, 저장된 파일은 각 파일마다 고유한 접근 URL이 부여되어 쉽게 접근 가능
-    	- 정적 웹 사이트 호스팅 가능
+## Storage 서비스
 
-    - Archive Storage: 데이터 아카이빙 및 장기 백업에 최적화된 스토리지 서비스
-    	- Infrequent Data 백업 및 Archiving Data 보관을 주 목적으로 하는 스토리지
-    	- Object Storage보다 데이터 저장 비용은 저렴, 데이터 처리 API 비용은 비쌈
+-   Object Storage: 인터넷 상에 데이터를 저장하고 사용할 수 있도록 구축된 오브젝트 스토리지
 
-    - NAS: 다수의 서버에서 공유하여 사용할 수 있는 스토리지
-    	- 최소 500GB에서 10TB까지 구성 추가는 100GB 단위로 추가가능
-    	- NAS 가용량 안에서 생성된 스냅샷 이미지를 이용해 데이터에 대한 복구 기능
-    	- 서버 사설 IP를 이용한 ACL 오픈으로 타 계정 서버에도 마운트하여 사용 가능
+    -   객체 기반의 무제한 파일 저장 스토리지
+    -   콘솔, RESTful API, SDK 등의 다양한 방법으로 오브젝트 관리, 저장된 파일은 각 파일마다 고유한 접근 URL이 부여되어 쉽게 접근 가능
+    -   정적 웹 사이트 호스팅 가능
 
-    - Data Teleporter: 대용량 데이터 이전을 위한 효과적인 솔루션
+-   Archive Storage: 데이터 아카이빙 및 장기 백업에 최적화된 스토리지 서비스
+
+    -   Infrequent Data 백업 및 Archiving Data 보관을 주 목적으로 하는 스토리지
+    -   Object Storage보다 데이터 저장 비용은 저렴, 데이터 처리 API 비용은 비쌈
+
+-   NAS: 다수의 서버에서 공유하여 사용할 수 있는 스토리지
+    -   최소 500GB에서 10TB까지 구성 추가는 100GB 단위로 추가가능
+    -   NAS 가용량 안에서 생성된 스냅샷 이미지를 이용해 데이터에 대한 복구 기능
+    -   서버 사설 IP를 이용한 ACL 오픈으로 타 계정 서버에도 마운트하여 사용 가능
+-   Data Teleporter: 대용량 데이터 이전을 위한 효과적인 솔루션
 
 특정 기간이 지나면 object 스토리지 내용을 아카이브 스토리지로 전송하는 등 설정 가능
 
