--- a/_posts/CloudComputing/NaverCloud/2024-04-13-disk용량증설.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-13-disk용량증설.md
@@ -106,4 +106,4 @@ $ df -h
     <img src="/assets/images/NCP/ex6-7.png" width="90%">
 </p>
 
-확인 시 확장된 크기인 20G가 마운트 됨
+확인 시 디스크 용량이 확장된 크기인 20G가 마운트 됨
