--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -94,9 +94,9 @@ Acknowledgment Number
     -   Proxy
 -   스케줄링 방식
 
-    -   Round-Robin Scheduling -> Naver Cloud 사용
-    -   Least-Connection -> Naver Cloud 사용
-    -   Source Hash Scheduling -> Naver Cloud 사용
+    -   <mark>Round-Robin Scheduling</mark> -> Naver Cloud 사용
+    -   <mark>Least-Connection</mark> -> Naver Cloud 사용
+    -   <mark>Source Hash Scheduling</mark> -> Naver Cloud 사용
     -   Weighted Round-Robin Scheduling
     -   Weighted Least-Connections
     -   Locality-Based Least-Connection Scheduling
@@ -104,8 +104,8 @@ Acknowledgment Number
     -   Destination Hash Scehduling
 
 -   네이버 클라우드 플랫폼 로드밸런서 헬스 체크
-    -   6초마다 헬스 체크
-    -   3회 연속으로 OK 혹은 error가 뜨면 바인딩 혹은 언바인딩
+    -   `6초마다 헬스 체크`
+    -   `3회 연속으로 OK 혹은 error`가 뜨면 바인딩 혹은 언바인딩
 -   접속 정보로 도메인 정보를 제공
     -   따라서 DNS에는 CNAME으로 등록하여야 함.
     -   하지만 Zone apex에 대해서는 RFC1033과 같이 등록 불가
