--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -16,6 +16,9 @@ date: 2024-04-05
 last_modified_at: 2024-04-05
 ---
 
+{% capture my_include %}{% include ./agenda.md %}{% endcapture %}
+{{ my_include | markdownify }}
+
 ## 목차
 
 -   클라우드 컴퓨팅 개념과 사용상의 장점
