--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -14,10 +14,11 @@ toc_sticky: true
 
 date: 2024-04-05
 last_modified_at: 2024-04-05
+
+layout: default
 ---
 
-{% capture my_include %}{% include ./agenda.md %}{% endcapture %}
-{{ my_include | markdownify }}
+{% include_relative agenda.md %}
 
 ## 목차
 
