--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -41,29 +41,48 @@ last_modified_at: 2024-04-08
 
 특정 기간이 지나면 object 스토리지 내용을 아카이브 스토리지로 전송하는 등 설정 가능
 
-# 클라우드 데이터베이스
+## 클라우드 데이터베이스
 
--   Cloud DB for MySQL
+### Cloud DB for MySQL
 
-자동 Fail-Over지원 및 사용자 환경에 맞는 구성 가능
+-   사용자 환경에 맞는 구성
 
-    - 최대 32VCPU 256GB 메모리 지원, 2TB 자동 디스크 확장
-    - 자동 Fail-Over를 지원하며 최대 5대까지 복제 Slave(Read only) 확장 가능
-    - private Load Balancer를 이용해서 Read 부하 분산 가능
-    - 자동 백업 주기를 설정할 수 있으며, 최대 30일 백업 파일 보관
+    -   `최대 32 vCPU 256GB 메모리까지 지원, 6TB 디스크 확장 가능`
 
+-   편리한 구성과 사용
 
-    - Master DB Failover
-    	- 콘솔에서 수동으로 FailOver를 실행할 수 있음
-    	- 서비스 오픈 전에 Master DB 장애로 FailOver가 발생하는 상황을 재현하여 Application에 영향이 없는지 사전에 점검할 수 있음
-    - DB Process 모니터링
-    	- DB Server 연결하여 수행 중인 Query를 확인할 수 있음
-    	- Slow Query로그 외에도 특정 시점에 어떤 Query가 수행 중인지 확인하여 DB 상태 점검에 도움
-    - Stand Alone 백업
-    	- Stand Alone 서버도 DB백업을 사용할 수 있음
-    	- 데이터가 삭제되어도 백업 보관일 설정 내에서 백업으로 데이터를 복구 할 수 있음
+    -   `클릭 몇 번으로 구성이 완료되며 검증된 파라메터 셋을 제공하여 안정된 운영이 가능`
 
--   Cloud DB for Redis
+-   자동 Fail-Over지원
+
+    -   `DNS기반의 DB인스턴스 자동 Fail-over를 지원하여 어플리케이션 변경 없이 DB 고가용성을 지원`
+    -   Master DB Failover
+        -   콘솔에서 수동으로 FailOver를 실행할 수 있음
+        -   서비스 오픈 전에 Master DB 장애로 FailOver가 발생하는 상황을 재현하여 Application에 영향이 없는지 사전에 점검할 수 있음
+
+-   Read Replica 확장
+
+    -   `최대 5대까지 복제 Slave(Read only) 확장 가능, 로드밸런서 상품을 이용하여 부하 분산이 가능`
+
+-   자동화된 DB 백업
+
+    -   `매일 자동 DB 백업, 최대 30일 백업 파일 보관`
+    -   Stand Alone 서버도 DB백업을 사용할 수 있음
+    -   데이터가 삭제되어도 백업 보관일 설정 내에서 백업으로 데이터를 복구 할 수 있음
+
+-   DB Process 모니터링
+
+    -   `설치 후 즉시 모니터링 이용 가능하며, 사용자의 메일, SMS등으로 빠르게 장애 보고`
+    -   DB Server 연결하여 수행 중인 Query를 확인할 수 있음
+    -   Slow Query로그 외에도 특정 시점에 어떤 Query가 수행 중인지 확인하여 DB 상태 점검에 도움
+
+구성도
+
+<p align = "center">
+    <img src="/assets/images/NCP/4-1.png" width="90%">
+</p>
+
+### Cloud DB for Redis
 
 -   자동 복구를 통해 안정적으로 운영되는 완전 관리형 클라우드 인메모리 캐시 서비스
 
