--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -16,7 +16,7 @@ date: 2024-04-08
 last_modified_at: 2024-04-08
 ---
 
-## Database
+## Cloud Database 서비스
 
 -   Cloud Db for MySQL,Cloud Db for MS-SQL,Cloud Db for Redis등의 관리형 데이터 베이스 상품들과,
 
@@ -47,19 +47,21 @@ last_modified_at: 2024-04-08
 
 -   사용자 환경에 맞는 구성
 
-    -   `최대 32 vCPU 256GB 메모리까지 지원, 6TB 디스크 확장 가능`
+    -   최대 32 vCPU 256GB 메모리까지 지원, `기본 10GB부터 10GB 단위로 6TB 디스크 확장 가능`
 
 -   편리한 구성과 사용
 
-    -   `클릭 몇 번으로 구성이 완료되며 검증된 파라메터 셋을 제공하여 안정된 운영이 가능`
+    -   클릭 몇 번으로 구성이 완료되며 검증된 파라메터 셋을 제공하여 안정된 운영이 가능
 
 -   자동 Fail-Over지원
 
-    -   `DNS기반의 DB인스턴스 자동 Fail-over를 지원하여 어플리케이션 변경 없이 DB 고가용성을 지원`
+    -   DNS기반의 DB인스턴스 자동 Fail-over를 지원하여 `어플리케이션 변경 없이 DB 고가용성을 지원`
     -   Master DB Failover
         -   콘솔에서 수동으로 FailOver를 실행할 수 있음
         -   서비스 오픈 전에 Master DB 장애로 FailOver가 발생하는 상황을 재현하여 Application에 영향이 없는지 사전에 점검할 수 있음
 
+-   멀티 존 지원
+    -   Master DB 서버 2대를 서로 다른 Zone에 생성하여 높은 가용성 제공
 -   Read Replica 확장
 
     -   `최대 5대까지 복제 Slave(Read only) 확장 가능, 로드밸런서 상품을 이용하여 부하 분산이 가능`
@@ -81,6 +83,21 @@ last_modified_at: 2024-04-08
 <p align = "center">
     <img src="/assets/images/NCP/4-1.png" width="90%">
 </p>
+
+### CDB Operation
+
+1. DB Process list 확인
+    - 데이터 베이스 서버에 현재 접속한 세션 리스트 확인 가능
+    - Kill Session
+        - 선택된 Session ID 강제로 종료
+2. Slave DB Replication 확인
+    - Slave 서버인 경우 Replication 상태 확인
+3. DB 서버 로그 확인
+4. DB 백업 설정 및 복원
+    - 백업은 하루에 한번 수행, 사용자 설정에 따라 최대 30일 보관
+5. 이벤트 설정
+6. DB엔진 업그레이드
+7. DB Config 관리
 
 ### Cloud DB for Redis
 
