--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -1,5 +1,5 @@
 ---
-title: '\[NCP\] 1. OverView'
+title: '\[NCP\] 1. Overview'
 excerpt: ''
 
 categories:
@@ -17,14 +17,6 @@ last_modified_at: 2024-04-05
 ---
 
 {% include_relative agenda.md %}
-
-## 목차
-
--   클라우드 컴퓨팅 개념과 사용상의 장점
--   클라우드 서비스의 유형
--   Naver Cloud Platform의 특징
--   Naver Cloud Platform의 주요 서비스 및 상품들
--   클라우드 관리 콘솔 개요
 
 ## 클라우드 컴퓨팅
 
