--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -1,5 +1,5 @@
 ---
-title: '\[NCP\] 4. DB/Management/Analytics'
+title: '\[NCP\] 6. DB/Management/Analytics'
 excerpt: 'DB 종류와 운영, 그리고 각 종 데이터 분석'
 
 categories:
@@ -15,6 +15,8 @@ toc_sticky: true
 date: 2024-04-08
 last_modified_at: 2024-04-08
 ---
+
+{% include_relative agenda.md %}
 
 ## Cloud Database 서비스
 
@@ -84,7 +86,7 @@ last_modified_at: 2024-04-08
     <img src="/assets/images/NCP/4-1.png" width="90%">
 </p>
 
-### CDB Operation
+#### CDB for mysql Operation
 
 1. DB Process list 확인
     - 데이터 베이스 서버에 현재 접속한 세션 리스트 확인 가능
@@ -99,6 +101,25 @@ last_modified_at: 2024-04-08
 6. DB엔진 업그레이드
 7. DB Config 관리
 
+### Cloud DB for MSSQL
+
+-   사용자 환경에 맞는 구성
+    -   최대 24 vCPU, 128GB 메모리까지 지원하며 2TB까지 DISK 확장이 가능
+    -   `100GB부터 2TB까지 10GB씩 자동 확장`
+-   자동 Fail over 지원
+-   편리한 구성과 사용
+-   모니터링과 알람
+-   자동화된 DB 백업
+-   쿼리 분석
+    -   1분 단위의 쿼리 레벨 성능 분석을 지원. 서비스 성능과 안정성을 향상
+
+#### CDB for MS-SQL Operation
+
+1. Config Group
+2. Slave DB 추가
+3. 이벤트 설정
+4. 쿼리 분석
+
 ### Cloud DB for Redis
 
 -   자동 복구를 통해 안정적으로 운영되는 완전 관리형 클라우드 인메모리 캐시 서비스
@@ -107,12 +128,11 @@ last_modified_at: 2024-04-08
     -   설치 후 Redis와 OS모니터링을 이용할 수 있으며 장애 또는 이벤트 발생 시 사용자의 메일, SMS로 장애 알람
     -   네이버 서비스에서 오랜 시간 검증된 Redis 설정을 기본으로 지원
 
--   Cloud DB for MS-SQL
-
-    -   네이버 서비스에서 검증된 최적화된 설정을 통해 안정적 운영, 장애가 발생하면 자동 복구
-    -   안정적인 서비스 제공을 위해 장애 발생 시 자동 Fail-over 기능 제공
-    -   설치 후 즉시 MSSQL과 OS 모니터링을 이용, MSSQL의 동작 상황을 그래프를 통해 확인 가능
-    -   1분 단위의 쿼리 레벨 성능 분석을 지원 서비스 성능과 안정성을 향상
+-   Redis Cluster 제공
+    -   vpc 내 private subnet에 구성
+    -   샤드 최소 3개
+    -   Config group을 통해 설정 적용
+    -   HA 구성 지원
 
 ## Management
 
