--- a/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
@@ -1,5 +1,5 @@
 ---
-title: '\[NCP 실습\] Docker Registry'
+title: '\[NCP 실습\] MySQL 생성 및 설정'
 excerpt: ''
 
 categories:
@@ -32,6 +32,21 @@ ACG 추가 설정
 
 ## DBeaver 사용하여 연결
 
-## Event
+## 모니터링
+
+### Event
 
 Event Rule 설정
+
+상품 이용 신청
+
+Configuration - Event Rule - Event Rules 생성
+
+### 테스트
+
+failover 실행
+
+master와 standby Master의 Role change가 발생함
+
+master -> standby Master
+standby Master -> master
