--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -1,5 +1,5 @@
 ---
-title: '\[NCP\] 3. Network/Media'
+title: '\[NCP\] 5. Network/Media'
 excerpt: '네트워크 기초'
 
 categories:
@@ -15,6 +15,8 @@ toc_sticky: true
 date: 2024-04-07
 last_modified_at: 2024-04-07
 ---
+
+{% include_relative agenda.md %}
 
 ## Network 기초
 
