--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -20,7 +20,7 @@ last_modified_at: 2024-04-08
 
 ## Cloud Database 서비스
 
--   Cloud Db for MySQL,Cloud Db for MS-SQL,Cloud Db for Redis등의 관리형 데이터 베이스 상품들과,
+-   Cloud Db for MySQL,Cloud Db for MS-SQL,Cloud Db for Redis등의 관리형 데이터 베이스 상품들
 
 ## Storage 서비스
 
